--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,24 @@
     "outDir": "./dist",
     "module": "commonjs",
     "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "lib": [
+      "es6",
+      "dom",
+      "es2016",
+      "es2017"
+    ],
     "jsx": "react",
     "sourceMap": true,
     "declaration": true,
     "esModuleInterop": true,
     "strictNullChecks": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "removeComments": true,
-    "typeRoots": ["index.d.ts", "node_modules/@types"]
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
-  "include": ["./src/lib/number-counter.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
