--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "kimchi"
   ],
   "devDependencies": {
+    "@innei/eslint-config-react-ts": "^0.9.8",
     "@innei/prettier": "^0.9.8",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
